force-app/main/default/objects/BI_Data__c/fields/time_level__c.field-meta.xml
<CustomField>
    <fullName>time_level__c</fullName>
    <label>time_level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>