force-app/main/default/objects/BI_Data__c/fields/Top_10_Searches__c.field-meta.xml
<CustomField>
    <fullName>Top_10_Searches__c</fullName>
    <label>Top 10 Searches</label>
    <length>255</length>
    <type>Text</type>
</CustomField>