force-app/main/default/objects/BI_Data__c/fields/Total_Arr_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Arr_c__c</fullName>
    <label>Hierarchy Total ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>