force-app/main/default/objects/BI_Data__c/fields/User_Footprint_Rsch_Any_Mkt_Prev_Val__c.field-meta.xml
<CustomField>
    <fullName>User_Footprint_Rsch_Any_Mkt_Prev_Val__c</fullName>
    <label>User Footprint Rsch Any Mkt Prev Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>