force-app/main/default/objects/BI_Data__c/fields/User_Footprint_Rsch_Mkt_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>User_Footprint_Rsch_Mkt_Last_Modified__c</fullName>
    <label>User Footprint Rsch Mkt Last Modified</label>
    <type>DateTime</type>
</CustomField>