force-app/main/default/objects/BI_Data__c/fields/Visit_Score__c.field-meta.xml
<CustomField>
    <fullName>Visit_Score__c</fullName>
    <description>MIS-4723</description>
    <label>Visit Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>