force-app/main/default/objects/BI_Data__c/fields/Weighted_Number_of_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Number_of_Active_Users__c</fullName>
    <description>MIS-4723</description>
    <label>Weighted Number of Active Users</label>
    <length>50</length>
    <type>Text</type>
</CustomField>