force-app/main/default/objects/BI_Data__c/fields/weighted_sum__c.field-meta.xml
<CustomField>
    <fullName>weighted_sum__c</fullName>
    <label>weighted_sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>