force-app/main/default/objects/BI_Data__c/fields/X100K_Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>X100K_Website_Visits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pull from &quot;website_fit_share&quot; field in BI</description>
    <inlineHelpText>Over 100K Website Visits</inlineHelpText>
    <label>100K+ Website Visits</label>
    <type>Checkbox</type>
</CustomField>