force-app/main/default/objects/BI_Data__c/fields/Y1_Y2_Account__c.field-meta.xml
<CustomField>
    <fullName>Y1_Y2_Account__c</fullName>
    <description>MIS-756</description>
    <label>Y1/Y2+ Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>